data/derived/comb/progs/unify/prog0514.ml.out
Characters 17-20:
  let _ = sumList [1.1];;
                   ^^^
Error: This expression has type float but an expression was expected of type
         int
